AWS/Tickets/Tasks/Task1/sec_group.tf
resource "aws_security_group" "allow_tls_testing_instance" {
  name        = "allow_tls_testing"
  description = "Allow TLS inbound traffic"
  vpc_id = "${aws_vpc.my-vpc.id}"
  

 ingress {   #inbound rule SSH
    description = "TLS from VPC"
    from_port   = 22 
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  } 

 ingress {  
    description = "TLS from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  
 
 ingress {   
    description = "TLS from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  } 

  
  egress {    
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
